-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 19, 20
-
Component/s: hotspot
-
b06
-
aarch64
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8294452 | 19.0.2 | Tobias Hartmann | P4 | Resolved | Fixed | b02 |
| JDK-8291012 | 17.0.5-oracle | Tobias Hartmann | P4 | Resolved | Fixed | b04 |
| JDK-8291621 | 17.0.5 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
- backported by
-
JDK-8291012 AArch64: CMN should be handled the same way as CMP
-
- Resolved
-
-
JDK-8291621 AArch64: CMN should be handled the same way as CMP
-
- Resolved
-
-
JDK-8294452 AArch64: CMN should be handled the same way as CMP
-
- Resolved
-
- relates to
-
JDK-8206895 aarch64: rework error-prone cmp instuction
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/b9749f41
-
Commit
openjdk/jdk19u/d0b021be
-
Commit
openjdk/jdk/cc2b7927
-
Review
openjdk/jdk17u-dev/602
-
Review
openjdk/jdk19u/36
-
Review
openjdk/jdk/9246