8288992: AArch64: CMN should be handled the same way as CMP

Backport-of: cc2b79270445ccfb2181894fed2edfd4518a2904